feat: agregar soporte para notas en los ítems de pedido y actualizar pruebas correspondientes